--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nuxt": "3.0.0-rc.8"
   },
   "dependencies": {
-    "@headlessui/vue": "0.0.0-dev.0ce63d8",
+    "@headlessui/vue": "0.0.0-insiders.920365c",
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
