--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "devDependencies": {
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/tailwindcss": "^5.1.2",
-    "nuxt": "3.0.0-rc.8"
+    "nuxt": "^3.0.0-rc.10"
   },
   "dependencies": {
     "@headlessui/vue": "0.0.0-insiders.920365c",
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.2"
+    "@tailwindcss/typography": "^0.5.2",
+    "vue3-carousel": "^0.1.46"
   }
 }
