--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.0.1",
-    "@nuxtjs/tailwindcss": "^5.1.2",
-    "nuxt": "^3.0.0-rc.10"
+    "@nuxt/content": "^2.2.2",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "nuxt": "^3.0.0"
   },
   "dependencies": {
-    "@headlessui/vue": "0.0.0-insiders.920365c",
-    "@heroicons/vue": "^1.0.6",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.2",
-    "vue3-carousel": "^0.1.46"
+    "@headlessui/vue": "1.7.4",
+    "@heroicons/vue": "^2.0.13",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.8",
+    "vue3-carousel": "^0.2.5"
   }
 }
