--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
+    "@vueuse/core": "^9.5.0",
+    "@vueuse/motion": "2.0.0-beta.18",
     "vue3-carousel": "^0.2.5"
   }
 }
