--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "mini-svg-data-uri": "^1.4.4"
+    "mini-svg-data-uri": "^1.4.4",
+    "shiki-es": "^0.2.0"
   }
 }
