--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "mini-svg-data-uri": "^1.4.4",
-    "shiki-es": "^0.2.0"
+    "shiki-es": "^0.2.0",
+    "vue-use-active-scroll": "^0.9.9"
   }
 }
