--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.4.3",
+    "@nuxtjs/tailwindcss": "^6.3.1",
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.2.2",
     "postcss": "^8.4.21",
@@ -22,7 +24,9 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@vueuse/core": "^9.12.0",
     "mini-svg-data-uri": "^1.4.4",
-    "shiki-es": "^0.2.0"
+    "shiki-es": "^0.2.0",
+    "vue-use-active-scroll": "^0.9.9"
   }
 }
