--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.4.3",
+    "@nuxt/image-edge": "1.0.0-28000486.357efad",
+    "@nuxt/types": "^2.16.3",
+    "@nuxt/webpack-builder": "^3.3.2",
     "@nuxtjs/tailwindcss": "^6.3.1",
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.2.2",
